--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
-  name: jonathan-harrell-v2
-  repo: jonathanharrell/jonathan-harrell-v2
+  name: jonathanharrell-v2
+  repo: jonathanharrell/jonathanharrell-v2
   branch: master
 media_folder: static/assets
 public_folder: /assets
