--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: jonathanharrell-v2
+  name: github
   repo: jonathanharrell/jonathanharrell-v2
   branch: master
 media_folder: static/assets
