--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,7 +10,9 @@ collections:
     folder: blog
     create: true
     fields:
-      - { name: path, label: Path }
+      - { name: slug, label: Slug }
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
+      - { name: description, label: Description, widget: text }
+      - { name: tags, label: Tags, widget: list }
       - { name: body, label: Body, widget: markdown }
