--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "rehype-highlight": "^4.1.0",
     "tailwindcss": "^3.0.17"
   }
 }
