--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "rehype-autolink-headings": "^5.1.0",
     "rehype-highlight": "^4.1.0",
+    "rehype-slug": "^4.0.1",
     "tailwindcss": "^3.0.17"
   }
 }
