--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "postcss": "^8.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
-    "rehype-autolink-headings": "^5.1.0",
     "rehype-highlight": "^4.1.0",
     "rehype-slug": "^4.0.1",
     "tailwindcss": "^3.0.17"
