--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@svgr/webpack": "^6.2.1",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.2",
     "gatsby": "^4.5.4",
@@ -30,6 +31,7 @@
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-sharp": "^4.5.2",
     "gatsby-plugin-sitemap": "^5.5.0",
+    "gatsby-plugin-svgr-svgo": "^2.0.0",
     "gatsby-source-filesystem": "^4.5.2",
     "gatsby-transformer-sharp": "^4.5.0",
     "netlify-cms-app": "^2.15.65",
