--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@radix-ui/react-select": "^0.1.1",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.2",
@@ -40,6 +41,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "rehype-slug": "^4.0.1",
-    "tailwindcss": "^3.0.17"
+    "tailwindcss": "^3.1.2",
+    "tailwindcss-aria-attributes": "^1.3.0"
   }
 }
