--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.0.26",
+    "@codesandbox/sandpack-themes": "^2.0.21",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
@@ -40,6 +42,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-wrap-balancer": "^0.3.0",
     "rehype-slug": "^4.0.1",
     "tailwindcss": "^3.1.2",
     "tailwindcss-aria-attributes": "^1.3.0"
