--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@mdx-js/react": "^1.6.22",
     "@radix-ui/react-select": "^0.1.1",
     "@svgr/webpack": "^6.2.1",
-    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.2",
     "gatsby": "^4.5.4",
     "gatsby-plugin-google-analytics": "^4.5.0",
@@ -43,8 +42,6 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-wrap-balancer": "^0.3.0",
-    "rehype-slug": "^4.0.1",
-    "tailwindcss": "^3.1.2",
-    "tailwindcss-aria-attributes": "^1.3.0"
+    "rehype-slug": "^4.0.1"
   }
 }
